PublicTransportMap = executable('PublicTransportMap',
                      'src/PublicTransportMap.cpp',
                      include_directories: [osmscoutIncDir],
                      dependencies: [mathDep, openmpDep],
                      link_with: [osmscout],
                      install: true)

